# moonterm

./: .gitignore  README.md  Todo.markdown  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.local.json
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FLOW.md  GLOSSARY.md  PLAN.md  security.md
scripts/: generate-icon.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  env.rs  lib.rs  main.rs  pty.rs  workspace.rs
src/components/: ActivityIndicator.tsx  BookmarksDialog.tsx  CloseConfirmDialog.tsx  CommandHistoryDialog.tsx  EnvPopover.tsx  ErrorBoundary.tsx  KeybindSettings.tsx  MainPanel.tsx  PasswordDialog.tsx  QuickStartDialog.tsx  ResizeHandle.tsx  RoleBadge.tsx  SettingsDialog.tsx  Sidebar.tsx  TabBar.tsx  TerminalContextMenu.tsx  TerminalPanel.tsx  TerminalSearchBar.tsx  TerminalThumbnail.tsx  ThumbnailBar.tsx  Toast.tsx  WorkspaceView.tsx
src/lib/: command-bookmarks.ts  command-history.ts  keybind-manager.ts  pty-listeners.ts  session-manager.ts  tauri-bridge.ts  terminal-registry.ts  theme-manager.ts  toast-events.ts  version.ts
src/stores/: workspace-store.ts
src/styles/: main.css
src/themes/: black.json  colorblind.json  default.json  pink.json  purple.json  schema.ts
src/types/: electron.d.ts  index.ts  session.ts
