[package]
name = "moonterm"
version = "1.0.12"
description = "A terminal aggregator with multi-workspace support"
authors = ["zoonderkins"]
edition = "2021"

[lib]
name = "moonterm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
flate2 = "1.0"
chrono = "0.4"

# Encryption (password-only, cross-platform)
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
